fix(components/navbar): fix nav layout issue

--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -1,26 +1,26 @@
-@import '../../styles/variables.css';
+@import "../../styles/variables.css";
+@import "../../styles/global.css";
 
 nav {
-    width: 100%;
-    color: var(--secondary-clr);
-    padding: 4px 0;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    z-index: 10;
+  width: 100%;
+  color: var(--secondary-clr);
+  padding: 4px 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 10;
 }
 
 nav img {
-    width: 100px;
+  width: 100px;
 }
 
 nav ul li {
-    display: inline-block;
-    list-style: none;
-    margin: 5px 20px;
-    font-size: 20px;
+  display: inline-block;
+  list-style: none;
+  margin: 5px 20px;
+  font-size: 20px;
 }
-
